# jetson-vision

./: CMakeLists.txt  Detection.cpp  OpencvJetson.sln  Pipeline.cpp  Source.cpp  main.cpp
OpencvJetson/: ColorConstants.h  Detection.h  Drawing.cpp  Drawing.h  Filters.cpp  Filters.h  OpencvJetson.vcxproj  OpencvJetson.vcxproj.filters  Pipeline.h  Source.cpp
OpencvJetson/x64/Debug/: OpencvJetson.pch  vc141.idb
OpencvJetson/x64/Debug/OpencvJetson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpencvJetson.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpencvJetson/x64/Release/: OpencvJetson.pch
OpencvJetson/x64/Release/OpencvJetson.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpencvJetson.lastbuildstate  OpencvJetson.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sockets/: SocketConnection.cpp  SocketConnection.hpp
threading/: ProcessThread.cpp  ProcessThread.hpp  SelectingThread.cpp  SelectingThread.hpp  SocketThread.cpp  SocketThread.hpp  Thread.cpp  Thread.hpp
vision/: Detection.cpp  Detection.h  Detection.hpp  Drawing.cpp  Drawing.hpp  Filters.cpp  Filters.hpp  Math.cpp  Math.h  Math.hpp  Pipeline.cpp  Pipeline.h  Pipeline.hpp  PipelineData.h  PipelineData.hpp  Target.cpp  Target.hpp
x64/Debug/: OpencvJetson.ilk
x64/Release/: OpencvJetson.iobj  OpencvJetson.ipdb
